# cdipy

./: .gitignore  Dockerfile  README.md  cdipy.py  chrome.py  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
cdipy/: __init__.py  cdipy.py  chrome.py  exceptions.py  fjson.py  protocol.py  utils.py
domains/: Accessibility.py  Animation.py  ApplicationCache.py  Audits.py  Browser.py  CSS.py  CacheStorage.py  DOM.py  DOMDebugger.py  DOMSnapshot.py  DOMStorage.py  Database.py  DeviceOrientation.py  Emulation.py  Fetch.py  HeadlessExperimental.py  IO.py  IndexedDB.py  Input.py  Inspector.py  LayerTree.py  Log.py  Memory.py  Network.py  Overlay.py  Page.py  Performance.py  Security.py  ServiceWorker.py  Storage.py  SystemInfo.py  Target.py  Testing.py  Tethering.py  Tracing.py  decorators.py
scripts/: fungen2.py  gen.py  screenshot.py  test.py
