[metadata]
name = cdipy
version = 0.2.1
author = Pilate
author_email = pilate@pilate.es
url = https://github.com/pilate/cdipy
description = An async Python interface for Chrome Devtools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = find:
python_requires = >=3.8
install_requires =
	aiohttp<3.12.0
	pyee<12.2.0
	websockets<=15