[metadata]
name = cdipy
version = 0.4.2
author = Pilate
author_email = pilate@pilate.es
url = https://github.com/pilate/cdipy
description = An async Python interface for Chrome Devtools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = find:
python_requires = >=3.8
install_requires =
	aiohttp<3.13.0
	msgspec<0.20
	pyee<13.0.0
	websockets<=15